--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Watch Store</title>
+    <link href="%PUBLIC_URL%/assets/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script src="%PUBLIC_URL%/assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
